--- a/src/assets/styles/_pages.scss
+++ b/src/assets/styles/_pages.scss
@@ -544,6 +544,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 3rem;
 }
 .contact__cont {
   color: #fff;
@@ -558,7 +559,7 @@
   width: 85%;
   margin: auto;
   display: flex;
-  justify-content: center;
+  // justify-content: center;
 
   .experience {
     ul > li {
@@ -692,4 +693,10 @@
   width: 10px;
   height: 1px;
   background: #000;
+}
+
+@media screen and (max-width: 640px) {
+  .skill-list {
+    width: 100%;
+  }
 }
