Fix : lush project Add

--- a/src/assets/styles/_pages.scss
+++ b/src/assets/styles/_pages.scss
@@ -422,7 +422,8 @@
 .port__cont {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: flex-start;
+  gap: 2%;
 }
 
 .port__item {
